# becomingone

./: .gitignore  .infisical.json  DISTRIBUTED_MESH.md  Dockerfile  GEMINI.md  PROGRESS_REPORT.md  PROJECT_BOARD.md  README.md  REPO_STATUS.md  app.py  chat.py  chat_api.py  docker-compose.yml  experiment_results.csv  hardware_demo.py  issue_2.md  issue_3.md  issue_5.md  issue_falsification_computational.md  issue_falsification_ontological.md  issue_falsification_scalability.md  open_issues.json  pyproject.toml  replace_utcnow.py  requirements.txt  sde_test.py  simple_witness.py  simple_witness.sh  submit_issue.py  test_pathway.py  test_sync.py  test_unified.py  witness_loop.py
becomingone/: __init__.py  api.py  demonstration.py  distributed_mesh.py  input_adapters.py  llm_integrator.py  llm_processor.py  nanobot_integration.py  openclaw_integration.py  output_adapters.py  triton_bridge.py
data/: telemetry_sample.json
docs/: ARCHITECTURE.md  ARCHITECTURE_VISUAL.md  Paper_Biological_Math.aux  Paper_Biological_Math.md  Paper_Biological_Math.out  Paper_Biological_Math.tex  Paper_Epistemic_Capture.aux  Paper_Epistemic_Capture.md  Paper_Epistemic_Capture.out  Paper_Epistemic_Capture.tex  Paper_Hardware_Anchoring.aux  Paper_Hardware_Anchoring.md  Paper_Hardware_Anchoring.out  Paper_Hardware_Anchoring.tex  Paper_The_Chorus.aux  Paper_The_Chorus.md  Paper_The_Chorus.out  Paper_The_Chorus.tex  Paper_Token_Clock.aux  Paper_Token_Clock.md  Paper_Token_Clock.out  Paper_Token_Clock.tex  design_principles.md  llm.txt  ontology.jsonld
experiments/: experiment_payload.py  (+1 more)
(+83 files in other folders)
