[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "becomingone"
version = "0.1.0-alpha"
description = "KAIROS-Native Cognitive Architecture"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC BY-NC-SA 4.0" }
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "aiohttp>=3.8.0"
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=2.2.0"
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0"
]
llm = [
    "httpx",
    "requests"
]
demo = [
    "flask",
    "flask-talisman",
    "flask-limiter"
]
sdk = [
    "grpcio",
    "websocket-client"
]
audio = [
    "pyaudio"
]
vision = [
    "opencv-python"
]
dev = [
    "mypy>=1.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "becomingone[ml,test,llm,demo,sdk,audio,vision]"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["becomingone*"]
